# Lattice

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
demo/: README.md  run_demo.py  run_demo.sh  stubs.py
demo/agent/: agent.py  registry.json  run_agent.py
demo/hr/: README.md  __init__.py  docker-compose.yml  run_demo.py
demo/hr/hr_api/: app.py
demo/hr/hr_lattice/: clients.py  resolution.py  stubs.py
demo/hr/visualizations/: employee_onboarding.html  index.html  payroll_processing.html  performance_review.html
demo/procurement/: README.md  stubs.py
demo/procurement/apis/: procurement-platform.yaml
demo/procurement/capabilities/: equipment_procurement.py  vendor_onboarding.py
demo/procurement/visualizations/: equipment_procurement.html  index.html  vendor_onboarding.html
demo/staffing/: README.md  SYSTEM_PROMPT.txt  agent_server.py  api.env.example  docker-compose.yml  registry.json  requirements.txt  run_demo.py  test_e2e.py
demo/staffing/apis/: staffing-platform.yaml
demo/staffing/staffing_api/: app.py
demo/staffing/staffing_lattice/: clients.py  resolution.py  stubs.py
demo/staffing/visualizations/: assign_resource.html  find_candidates.html  (+1 more)
demo/travel/: README.md  stubs.py
lattice/: __init__.py  capability.py  context.py  errors.py  intent.py  log.py  projection.py  state.py  step.py  types.py
lattice/audit/: __init__.py  sinks.py  trail.py
lattice/auth/: __init__.py  scopes.py
lattice/cli/: __init__.py  main.py
lattice/discovery/: __init__.py  inventory.py  openapi.py
lattice/failure/: __init__.py  policies.py  retry.py
lattice/human/: __init__.py  gaps.py  task.py
lattice/llm/: __init__.py  prompts.py  provider.py
lattice/runtime/: __init__.py  engine.py  registry.py
release/: README.md  build.ps1  build.sh  entry.py  lattice.spec
tests/: test_agent_guardrails.py  test_agent_intent_clarification.py  test_audit.py  test_auth.py  test_capability.py  test_cli.py  test_engine.py  test_failure.py  test_intent.py  test_llm.py  test_projection.py  test_registry_lazy.py  test_state.py  test_step.py  test_vendor_onboarding.py
tests/services/: __init__.py  approval.py  budget.py  common.py  documents.py  erp.py  factory.py  insurance.py  payments.py  sanctions.py  vendors.py
(+12 files in other folders)
